@@ -1,5 +1,10 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add pattern and description for KSysV init
+	type (#10040). Thanks to Pino Toscano <toscano.pino@tiscali.it>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add matchlets for OpenOffice.org types
 	(#10100). Thanks to Pino Toscano <toscano.pino@tiscali.it> and Oliver
 	Braun <Oliver.Braun@sun.com>.
